--- a/rabbitmq_day1/pom.xml
+++ b/rabbitmq_day1/pom.xml
@@ -24,12 +24,26 @@
             <version>4.12</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
-        <!--rabbitmq依赖-->
+        <!--rabbitmq客户端连接依赖-->
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
             <version>5.7.2</version>
+        </dependency>
+
+        <!--slf4j日志依赖-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--apache语言包依赖-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
 
     </dependencies>
